css/unified.css
.unified_container .panel-default .panel-body h3 {
  font-size: 1.5em;
  display: none
}

.unified_container .panel-default #api .intro h2 {
  font-size: 32px;
  margin: 32px 0 24px;
  line-height: 41px;
  font-weight: normal;
  color: var(--oxitec-dark);
}

.unified_container .panel-default #api .divider {
  display: none
}

.unified_container .panel-default #api .localAccount {
  position: relative;
  width: 100%
}

.unified_container .panel-default #api .localAccount .entry .entry-item {
  position: relative;
  margin-top: 24px;
}

.unified_container .panel-default #api .localAccount .entry .entry-item:nth-child(2) {
  display: flex;
  flex-direction: column-reverse;
}

.forgot-password > a {
  color: var(--oxitec-dark);
  text-decoration: underline;
}

.working {
  display: none
}

.unified_container .panel-default #api .localAccount .create p {
  margin-top: 24px;
  text-align: center;
  color: rgba(54, 90, 114, 0.5);
  font-size: 14px;
}

.unified_container .panel-default #api .localAccount .create #createAccount {
  color: #365072;
  text-decoration: underline;
  margin-left: 10px;
}

.unified_container .panel-default .claims-provider-list-buttons.social {
  display: none;
}

.unified_container .panel-default .entry-item .password-label ~ .error {
  position: absolute;
  top: -20px;
}

.password-label {
  margin-top: 24px;
}

.unified_container .panel-default .entry-item .password-label label {
  bottom: 82px;
}

.unified_container .panel-default .entry .entry-item.filled .password-label label {
  bottom: 92px;
}

@media only screen and (min-width: 768px) {
  .password-label {
    margin-top: 16px;
  }
}

